infra/traefik/echo-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-server
  namespace: goyoai-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-server
  template:
    metadata:
      labels:
        app: echo-server
    spec:
      containers:
      - name: echo-server
        image: mendhak/http-https-echo:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: echo-server
  namespace: goyoai-web
spec:
  selector:
    app: echo-server
  ports:
  - port: 80
    targetPort: 8080
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: echo-server-route
  namespace: goyoai-web
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`echo.goyoai.com`) || Host(`gointern-api.goyoai.com`) && PathPrefix(`/echo`)
      kind: Rule
      services:
        - name: echo-server
          port: 80
  tls:
    secretName: goyoai-webs-tls
